implementation arc-core in ":plugins" replaced by compileOnly arc-core